# GaiaCom

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_EXPORT_MANIFEST.md  SECURITY.md  SECURITY_INVARIANTS.md  TRADEMARKS.md
Backend/: extreme_test_gaiacom.db-shm  extreme_test_gaiacom.db-wal  go.mod  go.sum  governance.json  main.go  routes.go  routes_adversarial_test.go  scheduler.go
Backend/auth/: auth_handler.go  auth_service.go  auth_service_test.go
Backend/config/: config.go
Backend/crypto/: crypto_service.go  crypto_test.go  kyber.go
Backend/database/: database.go
Backend/federation/: federation_handler.go  federation_service.go  federation_service_test.go  federation_types.go
Backend/gaiadrop/: gaiadrop_handler.go  gaiadrop_service.go  gaiadrop_test.go
Backend/governance/: bootstrap.go  bootstrap_test.go  handler.go  (+2 more)
Core/rust/gaiacore/: Cargo.toml
Core/rust/gaiacore/src/: envelope.rs  lib.rs  trust_mesh.rs
DesktopClient/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
DesktopClient/src-tauri/src/: lib.rs  main.rs
docs/: abuse-consensus.md  architecture.md  beta-known-limitations.md  deployment-guide.md  federation.md  gaiashield.md  governance.md  network-constitution-and-trust.md  protocol-v0.1.md  protocol.md  responsible-disclosure.md  security-invariants.md  storage.md  threat-model.md
security/: beta-v2-security-signoff.md  composite_hardening_poc.py  federation-smtp-security-gate.md  master_security_suite.py  poc_runner.py  public-beta-release-gate.md  total-system-security-gate.md  total_system_poc_runner.py
(+316 files in other folders)
